After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760173 - Missing includes in libgitg/gitg-platform-support.c
Missing includes in libgitg/gitg-platform-support.c
Status: RESOLVED FIXED
Product: gitg
Classification: Applications
Component: gitg
git master
Other FreeBSD
: Normal normal
: ---
Assigned To: gitg-maint
gitg-maint
Depends on:
Blocks:
 
 
Reported: 2016-01-05 18:45 UTC by Ting-Wei Lan
Modified: 2016-01-05 19:18 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Ting-Wei Lan 2016-01-05 18:45:36 UTC
It seems that it needs #include <cairo/cairo-xlib.h>.

libgitg/gitg-platform-support.c:76:7: error: implicit declaration of function 'cairo_xlib_surface_get_width' is invalid in C99
      [-Werror,-Wimplicit-function-declaration]
                w = cairo_xlib_surface_get_width (surface);
                    ^
libgitg/gitg-platform-support.c:76:7: note: did you mean 'cairo_image_surface_get_width'?
/usr/local/include/cairo/cairo.h:2537:1: note: 'cairo_image_surface_get_width' declared here
cairo_image_surface_get_width (cairo_surface_t *surface);
^
libgitg/gitg-platform-support.c:77:7: error: implicit declaration of function 'cairo_xlib_surface_get_height' is invalid in C99
      [-Werror,-Wimplicit-function-declaration]
                h = cairo_xlib_surface_get_height (surface);
                    ^
2 errors generated.
Comment 1 jessevdk@gmail.com 2016-01-05 18:57:07 UTC
I've added the missing includes on master, could you please check if this resolves your issue?
Comment 2 Ting-Wei Lan 2016-01-05 19:18:25 UTC
Yes, gitg can build now.