Add missing cairo includes

Bug https://bugzilla.gnome.org/show_bug.cgi?id=760173.